--- a/src/css/embla.css
+++ b/src/css/embla.css
@@ -11,10 +11,10 @@
 }
 
 .embla__slide__content {
-    border: 2px solid white;
+    border: none;
     border-radius: 1rem;
-    background-color: rgba(255, 255, 255, 0.05);
-    color: white;
+    background-color: rgba(255, 255, 255, 0.364);
+    color: black;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -22,6 +22,7 @@
     aspect-ratio: 1 / 1;
     transition: transform 0.3s ease, background-color 0.3s ease;
     font-family: 'Poppins', sans-serif;
+    font-weight: 600;
 }
 
 .embla__viewport {
@@ -49,6 +50,9 @@
     justify-content: center;
 }
 
+.embla__slide__label {
+    margin-bottom: 15px;
+}
 
 /* Controls unchanged */
 .embla__controls {
